--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -6,14 +6,12 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: Test Python Package
 
-on:
-  release:
-    types: [published]
-
+on: [push]
+  
 jobs:
-  deploy:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -26,12 +24,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build flake8 pytest
+        pip install build flake8 pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=150 --statistics
+    - name: Test with pytest
+      run: |
+        pytest tests --doctest-modules --junitxml=junit/test-results-python-3.x.xml
+
