--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -34,12 +34,13 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=150 --statistics
     - name: Test with pytest
       run: |
-        pytest tests --doctest-modules --junitxml=junit/test-results-python-3.x.xml
+        pytest tests --doctest-modules --junitxml=test_results/test-results-python-3.x.xml --cov-report html:test_results/cov_html --cov=imdecomposer --html=test_results/test-results-python-3.x.html --self-contained-html
     - name: Upload pytest test results
       uses: actions/upload-artifact@v2
       with:
         name: pytest-results-python-3.x
-        path: junit/test-results-python-3.x.xml
+        path: |
+        test_results/
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
 
