--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -39,8 +39,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest-results-python-3.x
-        path: |
-        test_results/
+        path: test_results/
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
 
