--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
-    "jupyter.debugJustMyCode": false
+    "jupyter.debugJustMyCode": false,
+    "jupyter.jupyterServerType": "local",
+    "python.languageServer": "Pylance",
 }
